--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 [submodule "libs/bdi-abm-integration"]
 	path = libs/bdi-abm-integration
 	url = ../bdi-abm-integration.git
-	branch = dev
+	branch = main
 	update = merge
